[tool.poetry]
name = "doglib"
description = "Digital Object Gate Python library"
version = "0.0.0dev"
authors = [
    "Michał Gawor <m.j.gawor@uu.nl>"
]
license = "LICENSE.txt"


packages = [
    { include = "doglib" }
]

[tool.poetry.urls]
changelog = "https://github.com/clarin-eric/DOGlib/blob/master/CHANGELOG.md"
documentation = "https://github.com/clarin-eric/DOGlib/blob/master/README.md"
homepage = ""
repository = "https://github.com/clarin-eric/DOGlib"

[tool.poetry.dependencies]
certifi = "2024.7.4"
lxml = "5.2.2"
pycurl = "7.45.3"
python = '>=3.11.*,<4.0'
jsonpath-rw = "1.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(base, stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

